# pkg/app/api/input/input.go
@@ -7,10 +7,18 @@ var (
 )
 
 type ListCircleInput struct {
+	Start      int   `json:"start"`
+	End        int   `json:"end"`
 	CategoryID []int `json:"categoryID"`
 }
 
 func (i ListCircleInput) Validate() error {
+	if i.Start < 0 {
+		return ErrInvalidRequest
+	}
+	if i.End < 0 {
+		return ErrInvalidRequest
+	}
 	for _, v := range i.CategoryID {
 		if v <= 0 {
 			return ErrInvalidRequest
